--- a/mlruns/0/meta.yaml
+++ b/mlruns/0/meta.yaml
@@ -1,4 +1,4 @@
-artifact_location: file:///Users/zohair/SAP/mlflow/plugin/mlflow-test-plugin/mlruns/0
+artifact_location: mlflow-artifacts:/0
 experiment_id: '0'
 lifecycle_stage: active
 name: Default
