added some tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,15 @@
       "program": "quickstart.py",
       "console": "integratedTerminal",
       "justMyCode": false
+    },
+    {
+      "name": "Python: Debug Tests",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "purpose": ["debug-test"],
+      "console": "integratedTerminal",
+      "justMyCode": false
     }
   ]
 }
